RESOLVED FIXED42216
ResourceRequest::doUpdateResourceRequest() crashes if client denied request
https://bugs.webkit.org/show_bug.cgi?id=42216
Summary ResourceRequest::doUpdateResourceRequest() crashes if client denied request
Alexey Proskuryakov
Reported 2010-07-13 17:11:22 PDT
ResourceRequest::doUpdateResourceRequest() doesn't have a null check for m_cfRequest, so it can easily crash.
Attachments
proposed patch (1.45 KB, patch)
2010-07-13 17:14 PDT, Alexey Proskuryakov
darin: review+
Alexey Proskuryakov
Comment 1 2010-07-13 17:14:53 PDT
Created attachment 61438 [details] proposed patch
Alexey Proskuryakov
Comment 2 2010-07-13 17:20:32 PDT
Note You need to log in before you can comment on or make changes to this bug.