        Reviewed by Darin Adler.

https://bugs.webkit.org/show_bug.cgi?id=42216
        ResourceRequest::doUpdateResourceRequest() crashes if client denied request

        This is covered by many regression tests with patch for bug 42201 applied (because it makes
        us also use this code path for sync requests, and those currently have more strict limitations).

        * platform/network/cf/ResourceRequestCFNet.cpp:
        (WebCore::ResourceRequest::doUpdateResourceRequest): Added a null check.



Canonical link: https://commits.webkit.org/54117@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@63265 268f45cc-cd09-0410-ab3c-d52691b4dbfc