WebCore/platform/network/cf/ResourceRequestCFNet.cpp
@@ -146,6 +146,11 @@ void ResourceRequest::doUpdatePlatformRequest()
 
 void ResourceRequest::doUpdateResourceRequest()
 {
+    if (!m_cfRequest) {
+        *this = ResourceRequest();
+        return;
+    }
+
     m_url = CFURLRequestGetURL(m_cfRequest.get());
 
     m_cachePolicy = (ResourceRequestCachePolicy)CFURLRequestGetCachePolicy(m_cfRequest.get());
